--- a/cafecereja_.kv
+++ b/cafecereja_.kv
@@ -3,12 +3,12 @@
 #inicial chamando o sceenmanager e as screens
 <Opcao>
 
-    Menu:
-        name:'menu'
-    Tela_Mapa:
-        name:'mapa'
-    Carregar:
-        name:'carregar' 
+    #Menu:
+    #    name:'menu'
+    #Tela_Mapa:
+    #    name:'mapa'
+    #Carregar:
+    #    name:'carregar' 
     Busca:
         name:'busca'  
  
@@ -91,9 +91,6 @@
         BoxLayout:
             orientation:'horizontal'
     
-            
-            
-
 
             FloatLayout:
                 
@@ -124,12 +121,15 @@
             MDRectangleFlatButton:
                 text:'Buscar'
                 md_bg_color: app.theme_cls.primary_color
-                
                 size_hint_y: .8
-                on_release: app.root.buscar(entrada_busca.text)
+
+                on_release: self.parent.parent.parent.buscar(entrada_busca.text)
+                on_release: self.parent.parent.parent.carregar(lista_empresas)
 
 
         Scroll_lista_empresas:
+            MDList:
+                id:lista_empresas
                             
         
 
