--- a/cafecereja_.kv
+++ b/cafecereja_.kv
@@ -3,12 +3,12 @@
 #inicial chamando o sceenmanager e as screens
 <Opcao>
 
-    #Menu:
-    #    name:'menu'
-    #Tela_Mapa:
-    #    name:'mapa'
-    #Carregar:
-    #    name:'carregar' 
+    Menu:
+        name:'menu'
+    Tela_Mapa:
+        name:'mapa'
+    Carregar:
+        name:'carregar' 
     Busca:
         name:'busca'  
  
@@ -123,8 +123,7 @@
                 md_bg_color: app.theme_cls.primary_color
                 size_hint_y: .8
 
-                on_release: self.parent.parent.parent.buscar(entrada_busca.text)
-                on_release: self.parent.parent.parent.carregar(lista_empresas)
+                on_release: self.parent.parent.parent.carregar(lista_empresas,entrada_busca.text)
 
 
         Scroll_lista_empresas:
