--- a/cafecereja_.kv
+++ b/cafecereja_.kv
@@ -3,12 +3,12 @@
 #inicial chamando o sceenmanager e as screens
 <Opcao>
 
-    #Menu:
-    #    name:'menu'
-    #Tela_Mapa:
-    #    name:'mapa'
-    #Carregar:
-    #    name:'carregar' 
+    Menu:
+        name:'menu'
+    Tela_Mapa:
+        name:'mapa'
+    Carregar:
+        name:'carregar' 
     Busca:
         name:'busca'  
  
@@ -167,6 +167,4 @@
       
 <Ultimo_item_lista>
     on_release: self.parent.parent.parent.parent.carregar_final(self.parent,self)    
-    IconLeftWidget:
-        icon: "arrow-down"
-
+    
