--- a/cafecereja_.kv
+++ b/cafecereja_.kv
@@ -3,12 +3,12 @@
 #inicial chamando o sceenmanager e as screens
 <Opcao>
 
-    Menu:
-        name:'menu'
+    #Menu:
+    #    name:'menu'
     Tela_Mapa:
         name:'mapa'
-    Carregar:
-        name:'carregar' 
+    #Carregar:
+    #    name:'carregar' 
     Busca:
         name:'busca'  
  
@@ -102,6 +102,7 @@
             FloatLayout:
             
                 Tela_canvas:
+                    id:telamapa
                     size_hint_x: .5
 
                 
