--- a/cafecereja_.kv
+++ b/cafecereja_.kv
@@ -100,8 +100,11 @@
             
             id:telamapa
         MDToolbar:
+            id:legenda
+            left_action_items: [["pencil", lambda x: root.editar()]]
+
             size_hint_y: .1
-            title: "Mapa Do Varejão Noturno"
+            title: "-"
 
                 
 # Screen da busca
