--- a/cafecereja_.kv
+++ b/cafecereja_.kv
@@ -3,12 +3,12 @@
 #inicial chamando o sceenmanager e as screens
 <Opcao>
 
-    #Menu:
-    #    name:'menu'
+    Menu:
+        name:'menu'
     Tela_Mapa:
         name:'mapa'
-    #Carregar:
-    #    name:'carregar' 
+    Carregar:
+        name:'carregar' 
     Busca:
         name:'busca'  
  
